--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -4,25 +4,27 @@ block content
   <h1>#{title}</h1>
   <p>Welcome to #{title}</p>
 
-  <form method="post" action="/" enctype="multipart/form-data">
-    <input type="button" value="Scan" onclick="AcquireImage();" />
-    <br><br>
-    <div id="dwtcontrolContainer" ></div>
-    <br><br>
-    <input type="button" value="Upload Scan" onclick="DoUpload();" />
+  form(method='post' action='/' enctype='multipart/form-data' )
+    input(type='button' value='Scan' onclick='AcquireImage();')
+    br()
+    br()
+    div(id='dwtcontrolContainer')
+    br()
+    br()
+    input(type='button' value='Upload Scan' onclick='DoUpload();')
   
     script.
       function AcquireImage() {
         var DWObject = Dynamsoft.WebTwainEnv.GetWebTwain('dwtcontrolContainer');
         if (DWObject) {
-           DWObject.SelectSource(function () {
-             var OnAcquireImageSuccess = OnAcquireImageFailure = function () {
-               DWObject.CloseSource();
-             };
-             DWObject.OpenSource();
-             DWObject.IfDisableSourceAfterAcquire = true;
-             DWObject.AcquireImage(OnAcquireImageSuccess, OnAcquireImageFailure);
-           }, function () {console.log('SelectSource failed!');});
+            DWObject.SelectSource(function () {
+              var OnAcquireImageSuccess = OnAcquireImageFailure = function () {
+                DWObject.CloseSource();
+              };
+              DWObject.OpenSource();
+              DWObject.IfDisableSourceAfterAcquire = true;
+              DWObject.AcquireImage(OnAcquireImageSuccess, OnAcquireImageFailure);
+            }, function () {console.log('SelectSource failed!');});
         } 
       }
 
