--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{title}</title>
+    <title>{{ title }}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script type="text/javascript" src="/Resources/dynamsoft.webtwain.initiate.js"></script>
     <script type="text/javascript" src="/Resources/dynamsoft.webtwain.config.js"></script>
   </head>
   <body>
-    <h1>{title}</h1>
-    <p>Welcome to {title}</p>
+    <h1>{{ title }}</h1>
+    <p>Welcome to {{ title }}</p>
 
     <form method="POST" action="/" enctype="multipart/form-data">
-      <p id="message" style="color:red">{message}</p>
+      <p id="message" style="color:red">{{ message }}</p>
       <br /><br />
       <input type="button" value="Scan" onclick="AcquireImage();" />
       <br /><br />
